[gd_scene load_steps=6 format=3 uid="uid://cuvwlm1c668y1"]

[ext_resource type="Script" path="res://Carpeta de Scripts/characterSelectonl.gd" id="1_hs376"]
[ext_resource type="Texture2D" uid="uid://b1a2i2gxt53ob" path="res://Assets a Usar/Elementals_fire_knight_FREE_v1.1/fire_knight.png" id="3_vn1uc"]
[ext_resource type="Texture2D" uid="uid://dc4g8pkuunqxt" path="res://Assets a Usar/Elementals_metal_bladekeeper_FREE_v1.1/metal_bladekeeper.png" id="4_75ajd"]
[ext_resource type="Texture2D" uid="uid://cl42wsi5m2ss" path="res://Assets a Usar/elementals_wind_hashashin_FREE_v1.1/wind_hashashin.png" id="5_gc4xb"]
[ext_resource type="Texture2D" uid="uid://iljvupfnbhdh" path="res://Assets a Usar/Individual Sprites/adventurer-idle-02.png" id="6_eg2k3"]

[node name="Control" type="Control"]
layout_mode = 3
anchor_right = 0.399
anchor_bottom = 0.376
offset_right = -2.08002
offset_bottom = 27.92
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hs376")

[node name="cursor" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(315, 214)
scale = Vector2(2.15625, 2.15625)

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
anchor_mode = 0
zoom = Vector2(2.5, 2.5)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -34.0
offset_right = 100.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="FireKnight" type="Button" parent="GridContainer" groups=["characters"]]
layout_mode = 2
icon = ExtResource("3_vn1uc")

[node name="BladeKeeper" type="Button" parent="GridContainer" groups=["characters"]]
layout_mode = 2
icon = ExtResource("4_75ajd")

[node name="WindGuy" type="Button" parent="GridContainer" groups=["characters"]]
layout_mode = 2
icon = ExtResource("5_gc4xb")

[node name="Adventurer" type="Button" parent="GridContainer"]
layout_mode = 2
icon = ExtResource("6_eg2k3")

[connection signal="pressed" from="GridContainer/FireKnight" to="." method="_on_fire_knight_pressed"]
[connection signal="pressed" from="GridContainer/BladeKeeper" to="." method="_on_blade_keeper_pressed"]
[connection signal="pressed" from="GridContainer/WindGuy" to="." method="_on_wind_guy_pressed"]
[connection signal="pressed" from="GridContainer/Adventurer" to="." method="_on_adventurer_pressed"]
